# grant-agent

./: .gitignore  README.md  build_database.py  check_database_quality.py  config.yaml  create_ground_truth.py  evaluate_agent.py  grant_summarisation_agent.py  hugginface_supervised_fine_tuning.py  huggingface_supervised_fine_tuning.py  pyproject.toml  requirements.txt  utils.py
agent/: agent.py  exporter.py  extractor.py  fetcher.py
prompts/: agent_prompts.json  graph_rag_entity_extraction.json  llm_judge_examples.json  llm_judge_formatting_instructions.json
research/: build_database.py  check_database_quality.py  create_ground_truth.py  evaluate_agent.py  grant_summarisation_agent.py  huggingface_supervised_fine_tuning.py
