[project]
name = "grant-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "bs4>=0.0.2",
    "chromadb>=1.3.7",
    "ctransformers>=0.2.27",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "googleapis-common-protos>=1.72.0",
    "groq>=0.37.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-google-genai>=4.1.1",
    "langchain-groq>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pydantic>=2.12.5",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "translate>=3.8.0",
    "typing>=3.10.0.0",
    "urllib3>=2.6.2",
    "vertexai>=1.71.1",
]
